<resources>
    <string name="app_name">Wismer</string>
    <string name="lower_wismer">Lower Wismer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="the_grill">The Grill</string>
    <string name="sub_connection">Sub Connection</string>
    <string name="tres_habanero">Tres Habanero</string>
    <string name="jasmines">Jasmines</string>
    <string name="saved_orders">Saved orders</string>
    <string name="title_activity_home_page">HomePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jasmins">Jasmins</string>
    <string name="sub_connect">sub connection</string>
    <string name="pickles">Pickles</string>
    <string name="tomatos">Tomatos</string>
    <string name="boom_boom_sauce">Boom Boom Sauce</string>
    <string name="onions">Onions</string>
    <string name="lettuce">Lettuce</string>
    <string name="cheese_steak">Cheese Steak</string>
    <string name="cheese_burger">Cheese Burger</string>
    <string name="grilled_cheese">Grilled Cheese</string>
    <string name="burger">Burger</string>
    <string name="chick_sandwich">Chick Sandwich</string>
    <string name="black_bean_burger">Black Bean Burger</string>
    <string name="chicken_cheesesteak">Chicken Cheesesteak</string>
    <string name="vegan_burger">Vegan Burger</string>
    <string name="double_cheese_burger">Double Cheese Burger</string>
    <string name="vegan_cutlet">Vegan Cutlet</string>
    <string name="back">Back</string>
    <string name="button">Button</string>
    <string name="salad">Salad</string>
    <string name="taco">Taco</string>
    <string name="nachos">Nachos</string>
    <string name="burrito_bowl">Burrito Bowl</string>
    <string name="burrito">Burrito</string>
    <string name="quesadilla">Quesadilla</string>
    <string name="onions">Onions</string>
    <string name="sauce">Sauce</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomatos">Tomatos</string>
    <string name="the_grill">The Grill</string>
    <string name="next">Next</string>
    <string name="TresMeatBack">back</string>
    <string name="pork">Pork</string>
    <string name="steak">Steak</string>
    <string name="chicken">Chicken</string>
    <string name="beef">beef</string>
    <string name="tres_habanero">Tres Habanero</string>
    <string name="guacamole">Guacamole</string>
    <string name="tresextraname">tres Habanero</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="cheese">cheese</string>
    <string name="sour_cream">Sour Cream</string>
    <string name="tomatos">Tomatos</string>
    <string name="black_beans">Black beans</string>
    <string name="pinto_beans">Pinto beans</string>
</resources>