<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SandwichOptions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBC02D"
    tools:context=".SandwichOptions">

    <Button
        android:id="@+id/BoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boom_boom_sauce"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LettuceButton"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/LettuceButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <Button
        android:id="@+id/LettuceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lettuce"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PickleButton"
        app:layout_constraintStart_toStartOf="@+id/PickleButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/PickleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickles"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TomatoButton"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/TomatoButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <Button
        android:id="@+id/TomatoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomatos"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/OnionsButton"
        app:layout_constraintStart_toStartOf="@+id/OnionsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/OnionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onions"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />
</androidx.constraintlayout.widget.ConstraintLayout>